# django-sage-blog

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
docs/source/start/: admin.rst  database.rst  index.rst  installation.rst  introduction.rst  views.rst
kernel/: settings.py
locale/en/LC_MESSAGES/: django.po
locale/fa/LC_MESSAGES/: django.po
sage_blog/: apps.py
sage_blog/admin/: __init__.py  category.py  faq.py  post.py  tag.py
sage_blog/admin/filters/: __init__.py  category.py  post.py
sage_blog/filters/: __init__.py  post.py
sage_blog/locale/ar/LC_MESSAGES/: django.po
sage_blog/locale/fa/LC_MESSAGES/: django.po
sage_blog/management/commands/: generate_blog_data.py
sage_blog/migrations/: 0001_initial.py  0002_post_related_posts_post_suggested_posts.py  0002_post_video.py  0003_post_author.py
sage_blog/models/: __init__.py  category.py  faq.py  post.py  tag.py
sage_blog/repository/generator/: __init__.py  data_generator.py
sage_blog/repository/managers/: __init__.py  category.py  post.py  tag.py
sage_blog/repository/queryset/: __init__.py  category.py  post.py  tag.py
sage_blog/resources/: __init__.py  category.py  faq.py  post.py  tag.py
sage_blog/settings/: check.py
sage_blog/tests/: conftest.py  factories.py
sage_blog/tests/repository/: test_category_dal.py  test_post_dal.py  test_tag_dal.py
sage_blog/translation/: __init__.py  category.py  faq.py  post.py  tag.py
sage_blog/utils/import_export/: errors.py  exclude_fields.py  widget.py
sage_blog/views/mixins/: __init__.py  context.py  pagination.py  search.py
