[tool.poetry]
name = "django-sage-blog"
version = "0.2.11"
description = "Comprehensive Django package designed to seamlessly integrate blogging capabilities into your Django project."
authors = ["Sepehr Akbarzadeh <sepehr@sageteam.org>"]
readme = "README.md"
license = "MIT"
keywords = ["python", "blog", "python-packages"]
repository = "https://github.com/sageteamorg/django-sage-blog"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

packages = [
    { include = "sage_blog" }
]

[tool.poetry.urls]
"Documentation" = "https://django-sage-blog.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/sageteamorg/django-sage-blog"
"Issues" = "https://github.com/sageteamorg/django-sage-blog/issues"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = [
    { version = ">=4.2,<5.0", python = ">=3.8,<3.10"},
    { version = ">=4.2,<5.3", python = ">=3.10" }
]
sorl-thumbnail = "^12.10.0"
readtime = "^3.0.0"
django-jsonform = "^2.22.0"
pillow = "^10.4.0"
django-filter = "^24.2"
tqdm = "^4.66.5"
django-import-export = "^4.1.1"
django-ckeditor-5 = "^0.2.13"
django-sage-seo = "^0.3.14"
django-modeltranslation = "^0.19.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"
tox = "^4.15.1"
coverage = "^7.5.4"
pre-commit = "^3.7.1"
sphinx = "^7.3.7"
pylint = "^3.2.5"
pytest-cov = "^5.0.0"
sphinx-rtd-theme = "^2.0.0"
commitizen = "^3.27.0"
docformatter = "^1.7.5"
types-setuptools = "^70.2.0.20240704"
codecov = "^2.1.13"
ruff = "^0.5.7"
mypy = "^1.11.1"
pylint-django = "^2.5.5"
factory-boy = "^3.3.1"
pytest-django = "^4.8.0"
bandit = {extras = ["toml"], version = "^1.7.9"}

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-fail-under=90"
DJANGO_SETTINGS_MODULE = "kernel.settings"
python_files = ["tests.py", "test_*.py"]
testpaths = ["tests", "*/tests"]
norecursedirs = [
    "migrations",
    "static",
    "media",
    "node_modules",
    "env",
    "venv",
    ".venv",
    "dist",
    "build",
    "kernel"
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "kernel/*",
    "*/apps.py",
    "manage.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 88
exclude = [
    "venv/*",
    ".venv/*",
    "build/*",
    "dist/*",
    ".git/*",
    "__pycache__/*",
    "*.egg-info/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    "migrations/*"
]

[tool.ruff.lint]
ignore = [
    "E203",  # Ignore whitespace before ':', ';', or '#'
    "E501"   # Ignore line length issues (lines longer than 88 characters)
]
select = [
    "E",     # Select all PEP8 error codes
    "W",     # Select all warnings
    "F",     # Select all potential runtime errors
    "C90"    # Select custom or extended error code C90
]

[tool.mypy]
mypy_path = "stubs"
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = '''
^docs/source/conf.py|
^build/|
^tests/|
^stubs/|
^kernel/
'''

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | venv
  | env
  | __pycache__
  | static
  | media
  | node_modules
  | env
  | kernel
  | \.mypy_cache
  | \.pytest_cache
  | .*\.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [
    "venv",
    ".venv",
    "build",
    "dist",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "migrations",
    "static",
    "media",
    "node_modules",
    "env",
    "kernel"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.3"

[tool.commitizen.settings]
increment_types = ["feat", "fix"]

[tool.bandit]
targets = ["./sage_blog"]
exclude_dirs = [
    "tests",
    "migrations",
]

severity = "medium"
confidence = "medium"
max_lines = 500
progress = true
reports = true
output_format = "screen"
output_file = "bandit_report.txt"
include = ["B101", "B102"]
exclude_tests = ["B301", "B302"]

[tool.bandit.plugins]
B104 = { check_typed_list = true }

[tool.pylint]
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
    "E1101",  # Instance of 'Foo' has no 'bar' member (Django dynamic attributes)
    "W0212",  # Access to a protected member _foo of a client class
    "C0330",  # Wrong hanging indentation before block (conflicts with Black)
]
max-line-length = 88
ignore = [
    "migrations/*",
    "*/migrations/*",
    "venv/*",
    "build/*",
    "dist/*",
    ".git/*",
    "__pycache__/*",
    "*.egg-info/*",
    ".mypy_cache/*",
    ".pytest_cache/*"
]
load-plugins = [
    "pylint_django",
    "pylint.extensions.docparams",
]
# you must add yourproject.settings
django-settings-module = "kernel.settings"
good-names = [
    "qs",  # QuerySet abbreviation
    "pk",  # Primary key abbreviation
    "id",  # Identifier
]
suggestion-mode = true
const-rgx = "([A-Z_][A-Z0-9_]*)|(__.*__)"
attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
variable-rgx = "[a-z_][a-z0-9_]{2,30}$"
argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
argument-name-hint = [
    "cls",  # class method first argument
    "self",  # instance method first argument
]
method-rgx = "[a-z_][a-z0-9_]{2,30}$"
function-rgx = "[a-z_][a-z0-9_]{2,30}$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
module-rgx = "(([a-z_][a-z0-9_]*)|(__.*__))$"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
